better clock handeling, animations and wallpaper pre-loading

--- a/sketch/index.html
+++ b/sketch/index.html
@@ -7,8 +7,8 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1></h1>
-
+    <h1>00:00</h1>
+    <div id="bookmarks"></div>
 
     <!-- <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/p5@1.4.1/lib/p5.min.js"></script> -->
     <script type="text/javascript" src="home.js"></script>
