finalizing the design for now. bookmark buttons, title text animation, unsplash + pexels api, moving the background to a div, changing the fav folder to the favorites bar

--- a/sketch/index.html
+++ b/sketch/index.html
@@ -5,12 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home</title>
     <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.cdnfonts.com/css/product-sans" rel="stylesheet">
 </head>
 <body>
+    <div id="bg"></div>
     <h1>00:00</h1>
     <div id="bookmarks">
-        <p></p>
         <ul></ul>
+        <h3 id="title">Welcome!</h3>
     </div>
 
     <!-- <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/p5@1.4.1/lib/p5.min.js"></script> -->
