--- a/sketch/index.html
+++ b/sketch/index.html
@@ -6,14 +6,18 @@
     <title>Home</title>
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.cdnfonts.com/css/product-sans" rel="stylesheet">
+    <link rel="icon" href="/sketch/img/icon-bitty.png" type="image/png"/>
 </head>
 <body>
     <div id="bg"></div>
-    <h1>00:00</h1>
-    <div id="bookmarks">
-        <ul></ul>
-        <h3 id="title">Welcome!</h3>
+        <h1>00:00</h1>
+    <div class="container">
+        <div id="bookmarks">
+            <h3 id="title">Welcome!</h3>
+            <ul></ul>
+        </div>
     </div>
+    
 
     <!-- <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/p5@1.4.1/lib/p5.min.js"></script> -->
     <script type="text/javascript" src="home.js"></script>
