--- a/sketch/index.html
+++ b/sketch/index.html
@@ -15,14 +15,23 @@
             <form action="submit">
                 <fieldset>
                     <label for="gridSize">Grid Size</label>
-                    <input type="number" id="gridSize" name="gridSize" min="1" max="10" value="5">
+                    <input type="number" id="gridSize" name="gridSize" min="1" max="10" value="8">
                 </fieldset>
                 <fieldset>
                     <label for="provider">Provider</label>
                     <select name="provider" id="provider">
+                        <option value="bing" selected >Bing</option>
                         <option value="unsplash">Unsplash</option>
                         <option value="pexels">Pexels</option>
                     </select>
+                </fieldset>
+                <fieldset id="folderField">
+                </fieldset>
+                <fieldset>
+                    <input type="password" id="unsplashKey" name="unsplashKey" placeholder="Unsplash API Key">
+                </fieldset>
+                <fieldset>
+                    <input type="password" id="pexelsKey" name="pexelsKey" placeholder="Pexels API Key">
                 </fieldset>
                 <fieldset>
 
@@ -45,8 +54,6 @@
         </div>
     </div>
     
-
-    <!-- <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/p5@1.4.1/lib/p5.min.js"></script> -->
     <script type="text/javascript" src="home.js"></script>
 </body>
 </html>
